# atosaki

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  cmake_install.cmake  globals.hpp  hyprpm.toml  main.cpp  session.cpp  session.hpp
cli/: Cargo.toml
cli/src/: commands.rs  main.rs
daemon/: Cargo.toml
daemon/src/: main.rs  manager.rs  window.rs
daemon/src/config/: general.rs  mod.rs
daemon/src/hyprland/: hyprland.rs
daemon/src/session/: session.rs
rust-proto/: .session  Cargo.toml
src/: main.rs  manager.rs
src/config/: general.rs
src/hyprland/: hyprland.rs
src/session/: session.rs
src/window/: window.rs
