[package]
name = "atosaki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1", features = ["sync", "net", "process", "macros", "rt", "rt-multi-thread", "io-util", "time"] }
toml = "0.8.20"
clap = { version = "4.5.30", features = ["derive"] }
regex = "1.11.1"
anyhow = "1.0.97"
